force-app/main/default/objects/RETS_Rate_Plan__c/RETS_Rate_Plan__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Zuora rate plan, rate plan charge Ids</description>
    <label>RETS Rate Plans</label>
</CustomObject>