force-app/main/default/objects/RETS_Rate_Plan__c/fields/Zuora_ProductId__c.field-meta.xml
<CustomField>
    <fullName>Zuora_ProductId__c</fullName>
    <label>Zuora Product Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>