force-app/main/default/objects/RETS_Rate_Plan__c/fields/Zuora_ProductRatePlanId__c.field-meta.xml
<CustomField>
    <fullName>Zuora_ProductRatePlanId__c</fullName>
    <label>Zuora Product Rate Plan Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>